fix: wrong font-weight

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,10 +16,6 @@ a {
   text-decoration: none;
 }
 
-a, p, li {
-  font-weight: 100;
-}
-
 span.katex-html {
   display: none;
 }
